<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:contect=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="start"
        android:text="@string/number_people_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_num_people"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/num_people_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/hungry_label"
        android:textSize="24sp" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_light_label" />
        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_medium_label" />
        <RadioButton
            android:id="@+id/radio_ravenous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_ravenous_label" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate_cost_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:text="@string/calculate_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:text="@string/pizza_needed_label" />
        <TextView
            android:id="@+id/pizza_needed_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:gravity="end"
            android:visibility="invisible"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cost_per_pizza_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:text="@string/per_pizza_label"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/et_cost_per_pizza"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:text="@string/starting_cost"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/refresh_cost_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:text="@string/refresh_cost_btn_label"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/total_cost_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:text="@string/total_cost_label"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/total_cost_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:gravity="end"
            android:visibility="invisible"/>
    </LinearLayout>

</LinearLayout>
